Update config and depencies

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 		"lint:fix": "eslint . --fix --ext  .ts,.jsx"
 	},
 	"dependencies": {
+		"@radix-ui/react-switch": "^1.0.2",
+		"@radix-ui/react-tooltip": "^1.0.5",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
