--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup ESLint
         run: |
           npm install eslint@^8.0.1 eslint-config-prettier"@^8.8.0 eslint-config-standard@^17.0.0 eslint-plugin-import"@^2.25.2 eslint-plugin-n@^15.0.0 eslint-plugin-promise@^6.0.0 eslint-plugin-react@^7.32.2
-          [ -f .eslintrc.json ] || .eslintrc.json
+          [ -f .eslintrc.cjs ] || .eslintrc.cjs
           [ -f .babelrc ] || .babelrc
       - name: ESLint Report
         run: npx eslint "**/*.{js,jsx}"
