--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
 		"react-icons": "^4.8.0"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.21.3",
+		"@babel/plugin-syntax-jsx": "^7.18.6",
+		"@babel/preset-env": "^7.20.2",
+		"@babel/preset-react": "^7.18.6",
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
 		"@vitejs/plugin-react": "^3.1.0",
