--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@radix-ui/react-switch": "^1.0.2",
 		"@radix-ui/react-tooltip": "^1.0.5",
+		"axios": "^1.4.0",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
